--- a/donate.html
+++ b/donate.html
@@ -74,7 +74,7 @@
             <section class="friends">
                 <div class="friends-r1">
                     <div class="friends-r1-c1">
-                        <h1>Friends of Rotherham Cancer Care Centre</h1>
+                        <h1>Friends of The Rotherham Cancer Care Centre</h1>
                         <p>The generosity of service users and the local community has in no doubt contributed to the success of the Centre and although many people leave a donation or raise money with their friends for the Centre, many people wish to stay in touch and continue to support RCCC.</p>
                         <h3>Who are our friends?</h3>
                         <p>Our friends are mostly people who have a connection to RCCC either by accessing the service, via a diagnosis of cancer, or as a carer for someone living with cancer. Our friends are people who care enough to want to help us to ensure the future of RCCC for the people of Rotherham.</p>
