--- a/events.html
+++ b/events.html
@@ -63,7 +63,7 @@
                         <div>
                             <h1>Race Night</h1>
                             <div>
-                                <img src="assets/events/race-night.png" alt="#">
+                                <img src="assets/events/race-night.jpg" alt="#">
                             </div>
                             <div>
                                 <h2>Friday 13th November 2015</h2>
